infrastructure/apps/audit-service/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: audit-service
  namespace: mrun-apps
  annotations:
    consul.hashicorp.com/service-name: audit-service
    consul.hashicorp.com/service-port: "3003"

spec:
  selector:
    app.kubernetes.io/name: audit-service
  ports:
    - name: http
      port: 3003
      targetPort: 3003
  type: ClusterIP
