infrastructure/apps/audit-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: audit-service
  namespace: mrun-apps

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: audit-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
